# dbt-fusion

./: .changie.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSES.md  MEMO.md  README-ja.md  README.md
crates/dbt-adapter-proc-macros/: Cargo.toml
crates/dbt-adapter-proc-macros/src/: lib.rs
crates/dbt-agate/: Cargo.toml
crates/dbt-agate/src/: column.rs  columns.rs  converters.rs  decimal.rs  flat_record_batch.rs  lib.rs  print_table.rs  row.rs  rows.rs  table.rs  vec_of_rows.rs
crates/dbt-auth/: Cargo.toml
crates/dbt-auth/src/: auth_utils.rs  config.rs  lib.rs
crates/dbt-auth/src/bigquery/: mod.rs  types.rs
crates/dbt-auth/src/databricks/: mod.rs
crates/dbt-auth/src/postgres/: mod.rs
crates/dbt-auth/src/redshift/: mod.rs
crates/dbt-auth/src/salesforce/: mod.rs
crates/dbt-auth/src/snowflake/: key_format.rs  mod.rs
crates/dbt-cancel/: Cargo.toml
crates/dbt-cancel/src/: lib.rs
crates/dbt-cloud-api/: Cargo.toml  README.md  openapi-v3.yaml
crates/dbt-cloud-api/src/: lib.rs
crates/dbt-cloud-api/src/apis/: configuration.rs  connections_api.rs  credentials_api.rs  mod.rs  users_api.rs  whoami_api.rs
crates/dbt-cloud-api/src/models/: account_connection_detail.rs  account_connection_detail_response.rs  adapter_version_enum.rs  bigquery_connection.rs  bigquery_connection_v1.rs  bigquery_credentials.rs  config.rs  connection_method.rs  connection_type_enum.rs  credentials_response_list.rs  credentials_response_list_enveloped.rs  custom_pagination.rs  databricks_connection.rs  dbt_adapter_credentials.rs  dbt_adapter_version.rs  deployment_environment_auth_type.rs  extra.rs  mod.rs  postgres_connection.rs  postgres_credentials.rs  project.rs  project_connection.rs  redshift_connection.rs  redshift_credentials.rs  response_status.rs  status.rs  (+13 more)
crates/dbt-common/: Cargo.toml
crates/dbt-common/assets/: install.ps1  install.sh  install_common.sh  uninstall.ps1  uninstall.sh
crates/dbt-common/src/: adapter.rs  atomic.rs  behavior_flags.rs  cancellation.rs  changeset.rs  clap_cli.rs  constants.rs  dbt_cloud_client.rs  dbtz_clap_cli.rs  discrete_event_emitter.rs  embedded_install_scripts.rs  error_counter.rs  init.rs  io_args.rs  io_utils.rs  macros.rs  mod.rs  node_selector.rs  once_cell_vars.rs  pretty_string.rs  pretty_table.rs  profile_setup.rs  row_limit.rs  serde_utils.rs  stats.rs  stdfs.rs  string_utils.rs  time.rs  tokiofs.rs  yaml_utils.rs
crates/dbt-dag/: Cargo.toml
crates/dbt-dag/src/: deps_mgmt.rs  mod.rs  schedule.rs
crates/dbt-deps/: Cargo.toml
crates/dbt-deps/src/: add_package.rs  github_client.rs  hub_client.rs  mod.rs  package_listing.rs  private_package.rs  semver.rs  tarball.rs  tarball_client.rs  types.rs  utils.rs
crates/dbt-env/: Cargo.toml
crates/dbt-env/src/: env.rs
crates/dbt-error/: Cargo.toml
crates/dbt-error/src/: code_location.rs  codes.rs  lib.rs  macros.rs  types.rs  utils.rs
crates/dbt-frontend-common/: Cargo.toml
crates/dbt-frontend-common/src/: constraint.rs  dialect.rs  ident.rs  lib.rs  span.rs  types.rs  utils.rs
crates/dbt-frontend-schemas/: Cargo.toml
crates/dbt-frontend-schemas/src/: definition.rs  dialect.rs  function.rs  ident.rs  lib.rs  util.rs
crates/dbt-fusion-adapter/: Cargo.toml
crates/dbt-fusion-adapter/src/: auth.rs  base_adapter.rs  bridge_adapter.rs  cache.rs  cast_util.rs  config.rs  convert_type.rs  errors.rs  factory.rs  formatter.rs  funcs.rs  information_schema.rs  lib.rs  load_store.rs  macros.rs  metadata.rs  need_quotes.rs  query_ctx.rs  record_and_replay.rs  record_batch_utils.rs  relation_object.rs  render_constraint.rs  reserved_keywords.rs  response.rs  snapshots.rs  sql_engine.rs  statement.rs  stmt_splitter.rs  typed_adapter.rs
crates/dbt-ident/: Cargo.toml
crates/dbt-init/: Cargo.toml
crates/dbt-init/src/: dbt_cloud_client.rs  init.rs  lib.rs  mod.rs  profile_setup.rs
crates/dbt-jinja-utils/: Cargo.toml
crates/dbt-jinja-utils/src/: environment_builder.rs  flags.rs  invocation_args.rs  jinja_environment.rs  lib.rs  listener.rs  refs_and_sources.rs  serde.rs  sql_types.rs  utils.rs
crates/dbt-loader/: Cargo.toml
crates/dbt-loader/src/: args.rs  clean.rs  dbt_project_yml_loader.rs  download_manifest.rs  download_publication.rs  load_packages.rs  load_profiles.rs  load_vars.rs  loader.rs  mod.rs  utils.rs
crates/dbt-parser/: Cargo.toml
crates/dbt-parser/src/: args.rs  dbt_namespace.rs  dbt_project_config.rs  lib.rs  renderer.rs  renderer_test.rs  resolver.rs  sql_file_info.rs  tests.rs  utils.rs
crates/dbt-proc-macros/: Cargo.toml
crates/dbt-proc-macros/src/: lib.rs
crates/dbt-sa-cli/: Cargo.toml
crates/dbt-sa-cli/src/: dbt_sa_clap.rs  dbt_sa_lib.rs  lib.rs  main.rs
crates/dbt-schemas/: Cargo.toml  clippy.toml
crates/dbt-schemas/src/: constants.rs  dbt_types.rs  dbt_utils.rs  filter.rs  lib.rs  man.rs  materialization_resolver.rs  project_configs.rs  state.rs  stats.rs
crates/dbt-selector-parser/: Cargo.toml
crates/dbt-selector-parser/src/: lib.rs  parser.rs
crates/dbt-telemetry/: Cargo.toml
crates/dbt-telemetry/src/: lib.rs
crates/dbt-test-containers/: Cargo.toml
crates/dbt-test-containers/docker/: README.md
crates/dbt-test-containers/src/: start_db.rs
crates/dbt-test-primitives/: Cargo.toml
crates/dbt-test-primitives/src/: lib.rs
crates/dbt-test-utils/: Cargo.toml  assertions.rs
crates/dbt-test-utils/src/: mod.rs  profiles.rs  schema.rs  test_env_guard.rs
crates/dbt-test-utils/tests/: assertions.rs
crates/dbt-xdbc/: Cargo.toml  README.md  deny.toml
crates/dbt-xdbc/src/: bigquery.rs  builder.rs  checksums.rs  connection.rs  database.rs  databricks.rs  driver.rs  duration.rs  install.rs  lib.rs  odbc.rs  odbc_api.rs  query_ctx.rs  redshift.rs  repl.rs  salesforce.rs  semaphore.rs  snowflake.rs  statement.rs
crates/dbt-xdbc/tests/: driver.rs
crates/minijinja-typecheck-builtins/: .gitignore  Cargo.toml
crates/minijinja-typecheck-builtins/assets/: builtins.sdf.yml
crates/minijinja-typecheck-builtins/src/: lib.rs
crates/proto-rust/: Cargo.toml  README.md
crates/proto-rust/src/: lib.rs
(+1099 files in other folders)
